2004-03-17  Ravindra <rkumar@novell.com>
	* System.Drawing.Drawing2D: Created a repository for
	System.Drawing.Drawing2D tests.
	* ChangeLog: Added.